mainfeat: add initial vibecoded portfolio

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "install:all": "npx npm-run-all --sequential install:swiftlint install:swiftformat config",
     "format": "swiftformat .",
     "lint": "swiftlint --config=.swiftlint.yml .",
-    "update:submodules": "git submodule foreach --recursive 'branch=$(git remote show origin | awk \"/HEAD branch/ {print \\$NF}\"); git checkout $branch && git pull origin $branch' && CHANGED=$(git status --porcelain | grep '^ M \\.dotfiles' || true) && if [ -n \"$CHANGED\" ]; then npm run config; fi && git add -A && git commit -m \"chore: update submodules\" || echo 'No changes to commit'"
+    "update:submodules": "git submodule foreach --recursive 'branch=$(git remote show origin | awk \"/HEAD branch/ {print \\$NF}\"); git checkout $branch && git pull origin $branch' && CHANGED=$(git status --porcelain | grep '^ M \\.dotfiles' || true) && if [ -n \"$CHANGED\" ]; then npm run config; fi && git add -A && git commit -m \"chore: update submodules\" || echo 'No changes to commit'",
+    "build:main": "swift package --swift-sdk 6.1-RELEASE-wasm32-unknown-wasi js --use-cdn --product portfolio",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/GetAutomaApp/Base/issues"
   },
-  "homepage": "https://github.com/GetAutomaApp/Base#readme"
+  "homepage": "https://github.com/GetAutomaApp/Base#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
