feat: implement full UI finally

--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "lint": "swiftlint --config=.swiftlint.yml .",
     "update:submodules": "git submodule foreach --recursive 'branch=$(git remote show origin | awk \"/HEAD branch/ {print \\$NF}\"); git checkout $branch && git pull origin $branch' && CHANGED=$(git status --porcelain | grep '^ M \\.dotfiles' || true) && if [ -n \"$CHANGED\" ]; then npm run config; fi && git add -A && git commit -m \"chore: update submodules\" || echo 'No changes to commit'",
     "build:main": "swift package --swift-sdk 6.1-RELEASE-wasm32-unknown-wasi js --use-cdn --product portfolio",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "copy:build:to:dist": "echo 'todo'",
+    "copy:assets:to:dist": "",
+    "make:dist": "rm -rf dist && mk dist/",
+    "copy:index:to:dist": "echo 'todo'",
+    "prod": "npm run make:dist"
   },
   "repository": {
     "type": "git",
@@ -26,6 +31,7 @@
   },
   "homepage": "https://github.com/GetAutomaApp/Base#readme",
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "npm-run-all": "^4.1.5"
   }
 }
